Aplicado SEO a los HTMLs

--- a/index.html
+++ b/index.html
@@ -1,20 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
+    <!-- ETIQUETAS META -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="<meta name=" description"
+    content="Agencia de Marketing Digital: gestionamos redes sociales, SEO, diseño web responsive, rebranding y campañas en Google Ads. Potencia tu presencia online.">
+
+    <meta name="keywords"
+        content="marketing digital, redes sociales, SEO, rebranding, diseño web, landing pages, Google Ads, consultoría de marketing">
+
+    <meta property="og:title" content=Agencia de Marketing Digital>
+    <meta property="og:site_name" content=Ares Digital Marketing>
+    <meta property="og:url" content=www.AresDigitalMarketing.com>
+    <meta property="og:description" content=Agencia especializada en el Marketing Digital>
+    <meta property="og:type" content=website>
+    <meta property="og:image" content=https://tahielheinze.github.io/sitio-comision57680/assets/img/logo-img-1.svg>
+
+    <meta name="author" content="tahiel noé heinze">
+    <meta name="copyright" content="Ares Digital Marketing">
+    
+    <meta name="robots" content="index,follow">
+
+    <!-- TITULO DE LA PAGINA INICIAL -->
     <title>Ares Digital Marketing</title>
+    <link rel="shortcut icon" href="./assets/img/logo-img-1.ico" type="image/x-icon">
+
+    <!-- LINKS DE ESTILOS -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
+
 <body>
     <header class="header">
         <nav class="navbar-menu">
-            <a  class="logo" href="#">Ares Digital Marketing</a>
+            <a class="logo" href="#">Ares Digital Marketing</a>
 
             <label class="label_hamburguesa" for="menu_hamburguesa">
-                <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="list_icon" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+                <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="list_icon"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
                 </svg>
             </label>
             <input class="menu_hamburguesa" type="checkbox" name="" id="menu_hamburguesa">
@@ -45,7 +73,7 @@
                 <hr class="LineaDivisoraTitulo">
                 <h2>Despegamos tu <strong>negocio digital</strong></h2>
                 <div class="LogoEmpresaHome">
-                    <img src="./assets/img/logo-img-1.svg" alt="logotipo de la empresa">
+                    <img src="./assets/img/logo-img-1.svg" alt="logotipo de la empresa formando una A con una flecha en diagonal hacia arriba">
                 </div>
             </div>
         </section>
@@ -55,14 +83,18 @@
                 <h2>Bienvendio a Ares, <strong>Tu Socio</ong> en Marketing Digital</h2>
                 <hr class="LineaDivisoraContenidos">
                 <p class="nombre-empresa">ARES digital marketing</p>
-                <p>En Ares, nos enorgullece ser más que una agencia de marketing digital. Somos tu aliado estratégico para alcanzar tus objetivos comerciales en el mundo digital. Con una pasión inquebrantable por la innovación y la excelencia, nos dedicamos a proporcionar soluciones personalizadas que no solo potencian tu presencia en línea, sino que también impulsan resultados tangibles y sostenibles.</p>
+                <p>En Ares, nos enorgullece ser más que una agencia de marketing digital. Somos tu aliado estratégico
+                    para alcanzar tus objetivos comerciales en el mundo digital. Con una pasión inquebrantable por la
+                    innovación y la excelencia, nos dedicamos a proporcionar soluciones personalizadas que no solo
+                    potencian tu presencia en línea, sino que también impulsan resultados tangibles y sostenibles.</p>
                 <hr class="LineaDivisoraContenidos">
             </article>
 
             <article class="Contenido-Dos-Home">
-                <h3><strong>Juntos</strong> contruimos el camino hacia el <strong>éxito de tu empresa</strong>, con compromiso y profesionalismo. </h3>
+                <h3><strong>Juntos</strong> contruimos el camino hacia el <strong>éxito de tu empresa</strong>, con
+                    compromiso y profesionalismo. </h3>
                 <div class="FotoArticle1">
-                    <img src="./assets/img/montaña.png" alt="hombre en la cima de una montaña">
+                    <img src="./assets/img/montaña.png" alt="hombre escalador en la cima de una montaña mirando hacia el cielo">
                 </div>
                 <div class="ProyectosBox">
                     <p> <i class="fa-solid fa-arrow-up"> </i>300 + <br> Proyectos realizados</p>
@@ -90,14 +122,14 @@
                     <h2>Clientes que confian en nosotros</h2>
                 </div>
                 <div class="LogosClientes">
-                    <img src="./assets/img/farmacity-desktop.svg" alt="Farmacity">
+                    <img src="./assets/img/farmacity-desktop.svg" alt=" logotipo de Farmacity">
                     <img src="./assets/img/cine-hoyts-desktop.svg" alt="CineHoyts">
                     <img src="./assets/img/grido-desktop.svg" alt="Grido">
                     <img src="./assets/img/faber-castell-desktop.svg" alt="Faber-Castell">
-                    <img src="./assets/img/macowens-desktop.svg" alt="Macowens">
-                    <img src="./assets/img/musimundo-desktop.svg" alt="Musimundo">
-                    <img src="./assets/img/carrefour-desktop.svg" alt="Carrefour">
-                    <img src="./assets/img/donluis.svg" alt="Don Luis Panadera">
+                    <img src="./assets/img/macowens-desktop.svg" alt=" logotipo de Macowens">
+                    <img src="./assets/img/musimundo-desktop.svg" alt=" logotipo de Musimundo">
+                    <img src="./assets/img/carrefour-desktop.svg" alt=" logotipo de Carrefour">
+                    <img src="./assets/img/donluis.svg" alt=" logotipo de Don Luis Panadera">
                     <img src="./assets/img/sinteplast-desktop.svg" alt="Sinteplast">
                 </div>
             </article>
@@ -106,27 +138,27 @@
 
     <footer>
         <div class="logoFooter">
-            <img src="./assets/img/logo-info-vertical.svg" alt="logotipo de la empresa">
+            <img src="./assets/img/logo-info-vertical.svg" alt="logotipo de la empresa formando una A con una flecha en diagonal hacia arriba y nombre de la empresa">
         </div>
 
         <nav class="menu-footer">
             <ul>
-                <li><a href="#"  >Inicio</a></li>
-                <li><a href="./pages/nosotros.html" target="_blank" >Nosotros</a></li>
-                <li><a href="./pages/servicios.html" target="_blank" >Servicios</a></li>
-                <li><a href="./pages/portfolio.html" target="_blank" >Portfolio</a></li>
-                <li><a href="./pages/contacto.html" target="_blank" >Contacto</a></li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="./pages/nosotros.html" target="_blank">Nosotros</a></li>
+                <li><a href="./pages/servicios.html" target="_blank">Servicios</a></li>
+                <li><a href="./pages/portfolio.html" target="_blank">Portfolio</a></li>
+                <li><a href="./pages/contacto.html" target="_blank">Contacto</a></li>
             </ul>
         </nav>
 
         <div class="redes-footer">
             <h3>Nuestras Redes</h3>
             <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"
-                id="logo-insta"></a></i>
+                    id="logo-insta"></a></i>
             <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"
                     id="logo-facebook"></a></i>
             <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in"
-                id="logo-linkedin"></a></i>
+                    id="logo-linkedin"></a></i>
         </div>
 
         <div class="partner">
@@ -134,9 +166,10 @@
             <img src="./assets/img/Google-Partner.svg" alt="partner de Google">
         </div>
 
-        <div class="copyright" >
+        <div class="copyright">
             <p>© Copyright 2024-2034. All Rights Reserved. Ares Digital Marketing®</p>
         </div>
     </footer>
 </body>
+
 </html>
