--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
+    <!-- ETIQUETAS META -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contacta con nosotros a través de nuestro formulario, ubícanos en el mapa, llama o envía un email. También postúlate para trabajar con nosotros.">
+
+    <meta name="author" content="tahiel noé heinze">
+
+    <meta name="robots" content="noindex,follow">
+
+    <!-- TITULO DE LA PAGINA -->
     <title>Contacto - Ares Digital Marketing</title>
+    <link rel="shortcut icon" href="../assets/img/logo-img-1.ico" type="image/x-icon">
+
+    <!-- LINKS DE ESTILOS -->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
@@ -47,7 +58,7 @@
             <h1>Contacto</h1>
             <p> ¿Dudas? ¿Consultas? Contáctanos.</p>
             <div class="Logo-Titulo">
-                <img src="../assets/img/logo-img-1.svg" alt="logotipo de la empresa">
+                <img src="../assets/img/logo-img-1.svg" alt="logotipo de la empresa formando una A con una flecha en diagonal hacia arriba">
             </div>
         </section>
 
@@ -113,7 +124,7 @@
 
     <footer>
         <div class="logoFooter">
-            <img src="../assets/img/logo-info-vertical.svg" alt="logotipo de la empresa">
+            <img src="../assets/img/logo-info-vertical.svg" alt="logotipo de la empresa formando una A con una flecha en diagonal hacia arriba y nombre de la empresa">
         </div>
 
         <nav class="menu-footer">
