--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
+    <!-- ETIQUETAS META -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros - Ares Digital Marketin</title>
+    <meta name="description" content="Conoce al equipo detrás de nuestra agencia de marketing digital. Descubre sus estudios, roles y experiencia en nuestra empresa.">
+    
+    <meta name="author" content="tahiel noé heinze">
+
+    <meta name="robots" content="noindex,follow">
+
+    <!-- TITULO DE LA PAGINA -->
+    <title>Contacto - Ares Digital Marketing</title>
+    <link rel="shortcut icon" href="../assets/img/logo-img-1.ico" type="image/x-icon">
+
+    <!-- LINKS DE ESTILOS -->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 </head>
 
 <body>
@@ -48,7 +60,7 @@
             <h1>Nosotros</h1>
             <p>Descubre quienes convierten tus visiones en realidad.</p>
             <div class="Logo-Titulo">
-                <img src="../assets/img/logo-img-1.svg" alt="logotipo de la empresa">
+                <img src="../assets/img/logo-img-1.svg" alt="logotipo de la empresa formando una A con una flecha en diagonal hacia arriba">
             </div>
         </section>
 
@@ -64,7 +76,7 @@
         <section class="About-contenido">
             <article class="mujer-1">
                 <div class="mujer1-img">
-                    <img src="../assets/img/mujer1-desktop.svg" alt="">
+                    <img src="../assets/img/mujer1-desktop.svg" alt="Mujer con pelo corto y pecas posando para una fotografía en blanco y negro, mostrando una expresión seria y concentrada">
                 </div>
                 <div class="mujer1-box">
                     <h3>Ana González</h3>
@@ -77,7 +89,7 @@
 
             <article class="hombre-1">
                 <div class="hombre1-img">
-                    <img src="../assets/img/hombre1-desktop.svg" alt="">
+                    <img src="../assets/img/hombre1-desktop.svg" alt="Hombre con gafas vestido informal posando para una fotografía en blanco y negro, mostrando una expresión alegre y relajada">
                 </div>
                 <div class="hombre1-box">
                     <h3>Carlos Martínez</h3>
@@ -90,7 +102,7 @@
 
             <article class="mujer-2">
                 <div class="mujer2-img">
-                    <img src="../assets/img/mujer2-desktop.svg" alt="">
+                    <img src="../assets/img/mujer2-desktop.svg" alt="Mujer vestida formal y sosteniendo una taza posando para una fotografía en blanco y negro, mostrando una expresión alegre y elegante">
                 </div>
                 <div class="mujer2-box">
                     <h3>Lucía Fernández</h3>
@@ -104,7 +116,7 @@
 
             <article class="hombre-2">
                 <div class="hombre2-img">
-                    <img src="../assets/img/hombre2-desktop.svg" alt="">
+                    <img src="../assets/img/hombre2-desktop.svg" alt="Hombre con camisa posando para una fotografía en blanco y negro, mostrando una expresión seria y elegante.">
                 </div>
                 <div class="hombre2-box">
                     <h3>Miguel Rodríguez</h3>
@@ -117,7 +129,7 @@
 
             <article class="mujer-3">
                 <div class="mujer3-img">
-                    <img src="../assets/img/mujer3-desktop.svg" alt="">
+                    <img src="../assets/img/mujer3-desktop.svg" alt="Mujer posando para una fotografía en blanco y negro, mostrando una expresión de confianza y alegre">
                 </div>
                 <div class="mujer3-box">
                     <h3>Elena Pérez</h3>
@@ -131,7 +143,7 @@
 
             <article class="hombre-3">
                 <div class="hombre3-img">
-                    <img src="../assets/img/hombre3-desktop.svg" alt="">
+                    <img src="../assets/img/hombre3-desktop.svg" alt="Hombre con gafas posando para una fotografía en blanco y negro, mostrando una expresión de confianza y orgullo">
                 </div>
                 <div class="hombre3-box">
                     <h3>Javier López</h3>
