--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
+    <!-- ETIQUETAS META -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios - Ares Digital Marketing</title>
+    <meta name="description" content="Descubre nuestros servicios de marketing digital: gestión de redes sociales, SEO, diseño web, y más. Información detallada y soluciones efectivas.">
+
+    <meta name="keywords" content="servicios de marketing digital, gestión de redes sociales, SEO, diseño web, desarrollo web, optimización SEO, consultoría de marketing">
+    
+    <meta name="author" content="tahiel noé heinze">
+
+    <meta name="robots" content="index,follow">
+
+    <!-- TITULO DE LA PAGINA -->
+    <title>Contacto - Ares Digital Marketing</title>
+    <link rel="shortcut icon" href="../assets/img/logo-img-1.ico" type="image/x-icon">
+
+    <!-- LINKS DE ESTILOS -->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-</head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+</head> 
 
 <body>
     <header class="header">
@@ -46,7 +60,7 @@
             <h1>Servicios</h1>
             <p>Descubre lo que tenemos para ofrecerte.</p>
             <div class="Logo-Titulo">
-                <img src="../assets/img/logo-img-1.svg" alt="logotipo de la empresa">
+                <img src="../assets/img/logo-img-1.svg" alt="logotipo de la empresa formando una A con una flecha en diagonal hacia arriba">
             </div>
         </section>
 
@@ -88,7 +102,7 @@
                         digital de tu empresa.</p>
                 </div>
                 <div class="consultoria-img">
-                    <img src="../assets/img/Consultoria-desktop.svg" alt="una junta laboral">
+                    <img src="../assets/img/Consultoria-desktop.svg" alt="un grupo de personas charlando en una junta laboral">
                 </div>
             </article>
 
@@ -108,7 +122,7 @@
                     <p>Mejoramos tu presencia online mediante técnicas de SEO y campañas en Google Ads.</p>
                 </div>
                 <div class="seo-img">
-                    <img src="../assets/img/Posicionamiento-desktop.svg" alt="computadora portatil mostrando codigos">
+                    <img src="../assets/img/Posicionamiento-desktop.svg" alt="computadora portatil mostrando lenguaje de programacion">
                 </div>
             </article>
         </section>
@@ -118,7 +132,7 @@
 
     <footer>
         <div class="logoFooter">
-            <img src="../assets/img/logo-info-vertical.svg" alt="logotipo de la empresa">
+            <img src="../assets/img/logo-info-vertical.svg" alt="logotipo de la empresa formando una A con una flecha en diagonal hacia arriba y nombre de la empresa">
         </div>
 
         <nav class="menu-footer">
