--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
+    <!-- ETIQUETAS META -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Ares Digital Marketing</title>
+    <meta name="description" content="Explora nuestro portafolio con proyectos destacados para marcas reconocidas en diversos sectores. Muestra de nuestro trabajo y creatividad.">
+    
+    <meta name="author" content="tahiel noé heinze">
+
+    <meta name="robots" content="noindex,follow">
+
+    <!-- TITULO DE LA PAGINA -->
+    <title>Contacto - Ares Digital Marketing</title>
+    <link rel="shortcut icon" href="../assets/img/logo-img-1.ico" type="image/x-icon">
+
+    <!-- LINKS DE ESTILOS -->
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-</head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
 <body>
     <header class="header">
@@ -48,7 +59,7 @@
             <p id="TituloParrafo">En esta sección te presentamos algunos de los proyectos que hemos completado para nuestros valiosos
                 clientes.</p>
             <div class="Logo-Titulo">
-                <img src="../assets/img/logo-img-1.svg" alt="logotipo de la empresa">
+                <img src="../assets/img/logo-img-1.svg" alt="logotipo de la empresa formando una A con una flecha en diagonal hacia arriba">
             </div>
         </section>
 
@@ -170,7 +181,8 @@
 
     <footer>
         <div class="logoFooter">
-            <img src="../assets/img/LogoInfo-desktop.svg" alt="logotipo de la empresa">
+            <img src="../assets/img/LogoInfo-desktop.svg" alt="logotipo de la empresa formando una A con una flecha en diagonal hacia arriba y nombre de la empresa">
+
         </div>
 
         <nav class="menu-footer">
