--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="<meta name=" description"
-    content="Agencia de Marketing Digital: gestionamos redes sociales, SEO, diseño web responsive, rebranding y campañas en Google Ads. Potencia tu presencia online.">
+    <meta name="description" content="Agencia de Marketing Digital: gestionamos redes sociales, SEO, diseño web responsive, rebranding y campañas en Google Ads. Potencia tu presencia online.">
 
     <meta name="keywords"
         content="marketing digital, redes sociales, SEO, rebranding, diseño web, landing pages, Google Ads, consultoría de marketing">
