Aplicado SEO a los HTMLs

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content=www.AresDigitalMarketing.com>
     <meta property="og:description" content=Agencia especializada en el Marketing Digital>
     <meta property="og:type" content=website>
-    <meta property="og:image" content=https://tahielheinze.github.io/sitio-comision57680/assets/img/logo-img-1.svg>
+    <meta property="og:image" content="https://vscode.dev/github/tahielheinze/sitio-comision57680/blob/main/assets/img/logo-img.png">
 
     <meta name="author" content="tahiel noé heinze">
     <meta name="copyright" content="Ares Digital Marketing">
